--- a/user-service/package.json
+++ b/user-service/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@apollo/server": "^4.10.5",
     "@apollo/subgraph": "^2.8.4",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/graphql": "^14.2.3"
+    "@types/graphql": "^14.2.3",
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
