--- a/apollo-router/supergraph.yaml
+++ b/apollo-router/supergraph.yaml
@@ -1,10 +1,16 @@
 federation_version: "=2.0.0"
-subgraphs:
-  users:
-    routing_url: http://localhost:4001
-    schema:
-      file: ./user-schema.graphql
-  posts:
-    routing_url: http://localhost:4002
-    schema:
-      file: ./task-schema.graphql
+headers:
+  all: # Header rules for all subgraphs
+    request:
+    - propagate:
+        matching: .*  
+  subgraphs:
+    users:
+      routing_url: http://localhost:4001
+      schema:
+        file: ./user-schema.graphql
+    posts:
+      routing_url: http://localhost:4002
+      schema:
+        file: ./task-schema.graphql
+
